@@ -60,7 +60,7 @@ typedef struct {
 	void (*cat_selection_changed)(GtkWidget *tree, GtkTreeIter *iter);
 	void (*fill_tree)(GtkTreeView *tree,GtkTreeIter *iter); 
 	int (*cat_right_mouse_menu)(GtkWidget *menu, int type, GtkWidget *tree,GdkEventButton *event); 
-	void (*cat_key_press)(GdkEventKey *event, int selected_type); /* not yet implemented */
+	void (*cat_key_press)(GtkWidget *tree, GdkEventKey *event, int selected_type); /* not yet implemented */
 } gmpcPlBrowserPlugin;
 
 
